--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.2.0",
+    "elliptic": "^6.5.4",
     "pinia": "^2.0.27",
     "roboto-fontface": "*",
     "simple-crypto-js": "^3.0.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@babel/types": "^7.20.5",
     "@types/crypto-js": "^4.1.1",
+    "@types/elliptic": "^6.4.14",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
