--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.2.0",
+    "bn.js": "^5.2.1",
+    "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
     "pinia": "^2.0.27",
     "roboto-fontface": "*",
