--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "bn.js": "^5.2.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "elliptic": "^6.5.4",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "handlebars": "^4.7.7",
